--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/uni-app": "^1.4.4",
     "@types/vue": "^2.0.0",
     "@typescript-eslint/parser": "^5.54.1",
-    "@vue/compiler-sfc": "^3.3.4",
     "commitizen": "^4.2.3",
     "cross-env": "^7.0.2",
     "cz-lerna-changelog": "^2.0.3",
@@ -53,5 +52,9 @@
     "rollup-plugin-typescript2": "^0.27.2",
     "typescript": "^4.0.2",
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "@rollup/pluginutils": "^5.0.2",
+    "@vue/compiler-sfc": "^3.3.4"
   }
 }
